Call button and love button Added

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <div class="flex justify-between items-center mb-4">
                             <div class="bg-[#FFE3E2] rounded-2xl w-[60px]"><img class="p-3" src="./assets/emergency.png"
                                     alt="A image of emergency"></div>
-                            <button class="btn btn-circle"> <i class="fa-regular fa-heart"></i>
+                            <button class="btn btn-circle btn-love"> <i class="fa-regular fa-heart"></i>
                             </button>
                         </div>
                         <h3 class="font-hind font-bold text-xl text-[#111111] mb-1">National Emergency Number</h3>
@@ -76,7 +76,7 @@
                                 <i class="fa-regular fa-copy"></i>
                                 Copy
                             </button>
-                            <button class="flex-1 bg-[#00A63E] rounded-lg text-white py-2 cursor-pointer">
+                            <button class="flex-1 bg-[#00A63E] rounded-lg text-white py-2 cursor-pointer btn-call">
                                 <i class="fa-solid fa-phone"></i>
                                 Call
                             </button>
@@ -89,7 +89,7 @@
                         <div class="flex justify-between items-center mb-4">
                             <div class="bg-[#DFEFFF] w-[60px] rounded-2xl"><img class="p-3" src="./assets/police.png"
                                     alt="A image of police"></div>
-                            <button class="btn btn-circle"> <i class="fa-regular fa-heart"></i>
+                            <button class="btn btn-circle btn-love"> <i class="fa-regular fa-heart"></i>
                             </button>
                         </div>
                         <h3 class="font-hind font-bold text-xl text-[#111111] mb-1">Police Helpline Number</h3>
@@ -102,7 +102,7 @@
                                 <i class="fa-regular fa-copy"></i>
                                 Copy
                             </button>
-                            <button class="flex-1 bg-[#00A63E] rounded-lg text-white py-2 cursor-pointer">
+                            <button class="flex-1 bg-[#00A63E] rounded-lg text-white py-2 cursor-pointer btn-call">
                                 <i class="fa-solid fa-phone"></i>
                                 Call
                             </button>
@@ -115,7 +115,7 @@
                         <div class="flex justify-between items-center mb-4">
                             <div class="bg-[#FFE3E2] rounded-2xl w-[60px]"><img class="p-3" src="./assets/fire-service.png"
                                     alt="A image of emergency"></div>
-                            <button class="btn btn-circle"> <i class="fa-regular fa-heart"></i>
+                            <button class="btn btn-circle btn-love"> <i class="fa-regular fa-heart"></i>
                             </button>
                         </div>
                         <h3 class="font-hind font-bold text-xl text-[#111111] mb-1">Fire Service Number</h3>
@@ -128,7 +128,7 @@
                                 <i class="fa-regular fa-copy"></i>
                                 Copy
                             </button>
-                            <button class="flex-1 bg-[#00A63E] rounded-lg text-white py-2 cursor-pointer">
+                            <button class="flex-1 bg-[#00A63E] rounded-lg text-white py-2 cursor-pointer btn-call">
                                 <i class="fa-solid fa-phone"></i>
                                 Call
                             </button>
@@ -141,7 +141,7 @@
                         <div class="flex justify-between items-center mb-4">
                             <div class="bg-[#FFE3E2] rounded-2xl w-[60px]"><img class="p-3" src="./assets/ambulance.png"
                                     alt="A image of emergency"></div>
-                            <button class="btn btn-circle"> <i class="fa-regular fa-heart"></i>
+                            <button class="btn btn-circle btn-love"> <i class="fa-regular fa-heart"></i>
                             </button>
                         </div>
                         <h3 class="font-hind font-bold text-xl text-[#111111] mb-1">Ambulance Service</h3>
@@ -154,7 +154,7 @@
                                 <i class="fa-regular fa-copy"></i>
                                 Copy
                             </button>
-                            <button class="flex-1 bg-[#00A63E] rounded-lg text-white py-2 cursor-pointer">
+                            <button class="flex-1 bg-[#00A63E] rounded-lg text-white py-2 cursor-pointer btn-call">
                                 <i class="fa-solid fa-phone"></i>
                                 Call
                             </button>
@@ -167,7 +167,7 @@
                         <div class="flex justify-between items-center mb-4">
                             <div class="bg-[#FFE3E2] rounded-2xl w-[60px]"><img class="p-3" src="./assets/emergency.png"
                                     alt="A image of emergency"></div>
-                            <button class="btn btn-circle"> <i class="fa-regular fa-heart"></i>
+                            <button class="btn btn-circle btn-love"> <i class="fa-regular fa-heart"></i>
                             </button>
                         </div>
                         <h3 class="font-hind font-bold text-xl text-[#111111] mb-1">Women & Child Helpline</h3>
@@ -180,7 +180,7 @@
                                 <i class="fa-regular fa-copy"></i>
                                 Copy
                             </button>
-                            <button class="flex-1 bg-[#00A63E] rounded-lg text-white py-2 cursor-pointer">
+                            <button class="flex-1 bg-[#00A63E] rounded-lg text-white py-2 cursor-pointer btn-call">
                                 <i class="fa-solid fa-phone"></i>
                                 Call
                             </button>
@@ -193,7 +193,7 @@
                         <div class="flex justify-between items-center mb-4">
                             <div class="bg-[#FFE3E2] rounded-2xl w-[60px]"><img class="p-3" src="./assets/emergency.png"
                                     alt="A image of emergency"></div>
-                            <button class="btn btn-circle"> <i class="fa-regular fa-heart"></i>
+                            <button class="btn btn-circle btn-love"> <i class="fa-regular fa-heart"></i>
                             </button>
                         </div>
                         <h3 class="font-hind font-bold text-xl text-[#111111] mb-1">Anti Corruption Helpline</h3>
@@ -206,7 +206,7 @@
                                 <i class="fa-regular fa-copy"></i>
                                 Copy
                             </button>
-                            <button class="flex-1 bg-[#00A63E] rounded-lg text-white py-2 cursor-pointer">
+                            <button class="flex-1 bg-[#00A63E] rounded-lg text-white py-2 cursor-pointer btn-call">
                                 <i class="fa-solid fa-phone"></i>
                                 Call
                             </button>
@@ -218,10 +218,16 @@
             <div class=" md:col-span-3 p-3">
                 <div class="flex justify-between items-center">
                     <p class="font-bold"><i class="fa-regular fa-clock mr-2"></i>Call History</p>
-                    <button class="bg-[#00A63E] text-white px-8 py-3 rounded-3xl cursor-pointer">Clear</button>
+                    <button id="btn-clear" class="bg-[#00A63E] text-white px-8 py-3 rounded-3xl cursor-pointer">Clear</button>
                 </div>
-                <div>
-                    
+                <div id="history-container">
+                <!-- <div class="flex justify-between items-center bg-gray-200 mt-2 p-3">
+                    <div>
+                        <h1>title</h1>
+                        <p>number</p>
+                    </div>
+                    <p>time</p>
+                </div> -->
                 </div>
             </div>
         </section>
