--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         <span class="bg-[#F2F2F2] text-[18px] px-4 py-1 rounded-2xl font-hind text-[#5C5C5C]">All</span>
                         <div class="mt-5 flex justify-between gap-2">
 
-                            <button class="flex-1 border border-1 border-[#D4D6D5] rounded-lg py-2 cursor-pointer">
+                            <button class="flex-1 border border-1 border-[#D4D6D5] rounded-lg py-2 cursor-pointer btn-copy">
                                 <i class="fa-regular fa-copy"></i>
                                 Copy
                             </button>
@@ -98,7 +98,7 @@
                         <span class="bg-[#F2F2F2] text-[18px] px-4 py-1 rounded-2xl font-hind text-[#5C5C5C]">Police</span>
                         <div class="mt-5 flex justify-between gap-2">
 
-                            <button class="flex-1 border border-1 border-[#D4D6D5] rounded-lg py-2 cursor-pointer">
+                            <button class="flex-1 border border-1 border-[#D4D6D5] rounded-lg py-2 cursor-pointer btn-copy">
                                 <i class="fa-regular fa-copy"></i>
                                 Copy
                             </button>
@@ -124,7 +124,7 @@
                         <span class="bg-[#F2F2F2] text-[18px] px-4 py-1 rounded-2xl font-hind text-[#5C5C5C]">Fire</span>
                         <div class="mt-5 flex justify-between gap-2">
 
-                            <button class="flex-1 border border-1 border-[#D4D6D5] rounded-lg py-2 cursor-pointer">
+                            <button class="flex-1 border border-1 border-[#D4D6D5] rounded-lg py-2 cursor-pointer btn-copy">
                                 <i class="fa-regular fa-copy"></i>
                                 Copy
                             </button>
@@ -150,7 +150,7 @@
                         <span class="bg-[#F2F2F2] text-[18px] px-4 py-1 rounded-2xl font-hind text-[#5C5C5C]">Health</span>
                         <div class="mt-5 flex justify-between gap-2">
 
-                            <button class="flex-1 border border-1 border-[#D4D6D5] rounded-lg py-2 cursor-pointer">
+                            <button class="flex-1 border border-1 border-[#D4D6D5] rounded-lg py-2 cursor-pointer btn-copy">
                                 <i class="fa-regular fa-copy"></i>
                                 Copy
                             </button>
@@ -176,7 +176,7 @@
                         <span class="bg-[#F2F2F2] text-[18px] px-4 py-1 rounded-2xl font-hind text-[#5C5C5C]">Help</span>
                         <div class="mt-5 flex justify-between gap-2">
 
-                            <button class="flex-1 border border-1 border-[#D4D6D5] rounded-lg py-2 cursor-pointer">
+                            <button class="flex-1 border border-1 border-[#D4D6D5] rounded-lg py-2 cursor-pointer btn-copy">
                                 <i class="fa-regular fa-copy"></i>
                                 Copy
                             </button>
@@ -202,7 +202,7 @@
                         <span class="bg-[#F2F2F2] text-[18px] px-4 py-1 rounded-2xl font-hind text-[#5C5C5C]">Govt.</span>
                         <div class="mt-5 flex justify-between gap-2">
 
-                            <button class="flex-1 border border-1 border-[#D4D6D5] rounded-lg py-2 cursor-pointer">
+                            <button class="flex-1 border border-1 border-[#D4D6D5] rounded-lg py-2 cursor-pointer btn-copy">
                                 <i class="fa-regular fa-copy"></i>
                                 Copy
                             </button>
