readme.md file added

--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
                 Government of the People's Republic of Bangladesh</p>
         </section>
         <!-- card section starts here -->
-        <section class=" md:w-11/12 mx-auto grid grid-cols-1 md:grid-cols-12 mt-10">
+        <section class=" md:w-11/12 mx-auto grid grid-cols-1 md:grid-cols-12 mt-10 pb-8">
+            <!-- Left section -->
             <div class=" col-span-9 grid grid-cols-1 md:grid-cols-3 gap-7 md:mr-7">
                 <!-- card 1 -->
                 <div class="max-w-[400px]  bg-white shadow[0px_2px_3px_0_#00000015] rounded-xl">
@@ -213,9 +214,87 @@
                         </div>
                     </div>
                 </div>
+                <!-- card 7 -->
+                <div class="max-w-[400px]  bg-white shadow[0px_2px_3px_0_#00000015] rounded-xl">
+                    <div class="p-4">
+                        <div class="flex justify-between items-center mb-4">
+                            <div class="bg-[#FFE3E2] rounded-2xl w-[60px]"><img class="p-3" src="./assets/emergency.png"
+                                    alt="A image of emergency"></div>
+                            <button class="btn btn-circle btn-love"> <i class="fa-regular fa-heart"></i>
+                            </button>
+                        </div>
+                        <h3 class="font-hind font-bold text-xl text-[#111111] mb-1">Electricity Helpline</h3>
+                        <p class="font-roboto text-[18px] text-[#5C5C5C] mb-2">Electricity Outage</p>
+                        <p class="font-roboto text-[32px] font-bold text-[#111111] mb-1">16216</p>
+                        <span class="bg-[#F2F2F2] text-[18px] px-4 py-1 rounded-2xl font-hind text-[#5C5C5C]">Electricity</span>
+                        <div class="mt-5 flex justify-between gap-2">
+
+                            <button class="flex-1 border border-1 border-[#D4D6D5] rounded-lg py-2 cursor-pointer btn-copy">
+                                <i class="fa-regular fa-copy"></i>
+                                Copy
+                            </button>
+                            <button class="flex-1 bg-[#00A63E] rounded-lg text-white py-2 cursor-pointer btn-call">
+                                <i class="fa-solid fa-phone"></i>
+                                Call
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <!-- card 8 -->
+                <div class="max-w-[400px]  bg-white shadow[0px_2px_3px_0_#00000015] rounded-xl">
+                    <div class="p-4">
+                        <div class="flex justify-between items-center mb-4">
+                            <div class="bg-[#FFE3E2] rounded-2xl w-[60px]"><img class="p-3" src="./assets/brac.png"
+                                    alt="A image of emergency"></div>
+                            <button class="btn btn-circle btn-love"> <i class="fa-regular fa-heart"></i>
+                            </button>
+                        </div>
+                        <h3 class="font-hind font-bold text-xl text-[#111111] mb-1">Brac Helpline</h3>
+                        <p class="font-roboto text-[18px] text-[#5C5C5C] mb-2">Brac</p>
+                        <p class="font-roboto text-[32px] font-bold text-[#111111] mb-1">16442</p>
+                        <span class="bg-[#F2F2F2] text-[18px] px-4 py-1 rounded-2xl font-hind text-[#5C5C5C]">NGO</span>
+                        <div class="mt-5 flex justify-between gap-2">
+
+                            <button class="flex-1 border border-1 border-[#D4D6D5] rounded-lg py-2 cursor-pointer btn-copy">
+                                <i class="fa-regular fa-copy"></i>
+                                Copy
+                            </button>
+                            <button class="flex-1 bg-[#00A63E] rounded-lg text-white py-2 cursor-pointer btn-call">
+                                <i class="fa-solid fa-phone"></i>
+                                Call
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <!-- card 9 -->
+                <div class="max-w-[400px]  bg-white shadow[0px_2px_3px_0_#00000015] rounded-xl">
+                    <div class="p-4">
+                        <div class="flex justify-between items-center mb-4">
+                            <div class="bg-[#FFE3E2] rounded-2xl w-[60px]"><img class="p-3" src="./assets/Bangladesh-Railway.png"
+                                    alt="A image of emergency"></div>
+                            <button class="btn btn-circle btn-love"> <i class="fa-regular fa-heart"></i>
+                            </button>
+                        </div>
+                        <h3 class="font-hind font-bold text-xl text-[#111111] mb-1">Bangladesh Railway Helpline</h3>
+                        <p class="font-roboto text-[18px] text-[#5C5C5C] mb-2">Bangladesh Railway</p>
+                        <p class="font-roboto text-[32px] font-bold text-[#111111] mb-1">163</p>
+                        <span class="bg-[#F2F2F2] text-[18px] px-4 py-1 rounded-2xl font-hind text-[#5C5C5C]">Travel</span>
+                        <div class="mt-5 flex justify-between gap-2">
+
+                            <button class="flex-1 border border-1 border-[#D4D6D5] rounded-lg py-2 cursor-pointer btn-copy">
+                                <i class="fa-regular fa-copy"></i>
+                                Copy
+                            </button>
+                            <button class="flex-1 bg-[#00A63E] rounded-lg text-white py-2 cursor-pointer btn-call">
+                                <i class="fa-solid fa-phone"></i>
+                                Call
+                            </button>
+                        </div>
+                    </div>
+                </div>
             </div>
             <!-- right section -->
-            <div class=" md:col-span-3 p-3">
+            <div class=" md:col-span-3 p-3 bg-white rounded-xl">
                 <div class="flex justify-between items-center">
                     <p class="font-bold"><i class="fa-regular fa-clock mr-2"></i>Call History</p>
                     <button id="btn-clear" class="bg-[#00A63E] text-white px-8 py-3 rounded-3xl cursor-pointer">Clear</button>
