--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <!-- Left section -->
             <div class=" col-span-9 grid grid-cols-1 md:grid-cols-3 gap-7 md:mr-7">
                 <!-- card 1 -->
-                <div class="max-w-[400px]  bg-white shadow[0px_2px_3px_0_#00000015] rounded-xl">
+                <div class="card max-w-[400px]  bg-white  rounded-xl mx-3 md:mx-0">
                     <div class="p-4">
                         <div class="flex justify-between items-center mb-4">
                             <div class="bg-[#FFE3E2] rounded-2xl w-[60px]"><img class="p-3" src="./assets/emergency.png"
@@ -85,7 +85,7 @@
                     </div>
                 </div>
                 <!-- card 2 -->
-                <div class="max-w-[400px]  bg-white shadow[0px_2px_3px_0_#00000015] rounded-xl">
+                <div class="card max-w-[400px]  bg-white  rounded-xl mx-3 md:mx-0">
                     <div class="p-4">
                         <div class="flex justify-between items-center mb-4">
                             <div class="bg-[#DFEFFF] w-[60px] rounded-2xl"><img class="p-3" src="./assets/police.png"
@@ -111,7 +111,7 @@
                     </div>
                 </div>
                 <!-- card 3 -->
-                <div class="max-w-[400px]  bg-white shadow[0px_2px_3px_0_#00000015] rounded-xl">
+                <div class="card max-w-[400px]  bg-white  rounded-xl mx-3 md:mx-0">
                     <div class="p-4">
                         <div class="flex justify-between items-center mb-4">
                             <div class="bg-[#FFE3E2] rounded-2xl w-[60px]"><img class="p-3" src="./assets/fire-service.png"
@@ -137,7 +137,7 @@
                     </div>
                 </div>
                 <!-- card 4 -->
-                <div class="max-w-[400px]  bg-white shadow[0px_2px_3px_0_#00000015] rounded-xl">
+                <div class="card max-w-[400px]  bg-white  rounded-xl mx-3 md:mx-0">
                     <div class="p-4">
                         <div class="flex justify-between items-center mb-4">
                             <div class="bg-[#FFE3E2] rounded-2xl w-[60px]"><img class="p-3" src="./assets/ambulance.png"
@@ -163,7 +163,7 @@
                     </div>
                 </div>
                 <!-- card 5 -->
-                <div class="max-w-[400px]  bg-white shadow[0px_2px_3px_0_#00000015] rounded-xl">
+                <div class="card max-w-[400px]  bg-white  rounded-xl mx-3 md:mx-0">
                     <div class="p-4">
                         <div class="flex justify-between items-center mb-4">
                             <div class="bg-[#FFE3E2] rounded-2xl w-[60px]"><img class="p-3" src="./assets/emergency.png"
@@ -189,7 +189,7 @@
                     </div>
                 </div>
                 <!-- card 6 -->
-                <div class="max-w-[400px]  bg-white shadow[0px_2px_3px_0_#00000015] rounded-xl">
+                <div class="card max-w-[400px]  bg-white  rounded-xl mx-3 md:mx-0">
                     <div class="p-4">
                         <div class="flex justify-between items-center mb-4">
                             <div class="bg-[#FFE3E2] rounded-2xl w-[60px]"><img class="p-3" src="./assets/emergency.png"
@@ -215,7 +215,7 @@
                     </div>
                 </div>
                 <!-- card 7 -->
-                <div class="max-w-[400px]  bg-white shadow[0px_2px_3px_0_#00000015] rounded-xl">
+                <div class="card max-w-[400px]  bg-white  rounded-xl mx-3 md:mx-0">
                     <div class="p-4">
                         <div class="flex justify-between items-center mb-4">
                             <div class="bg-[#FFE3E2] rounded-2xl w-[60px]"><img class="p-3" src="./assets/emergency.png"
@@ -241,7 +241,7 @@
                     </div>
                 </div>
                 <!-- card 8 -->
-                <div class="max-w-[400px]  bg-white shadow[0px_2px_3px_0_#00000015] rounded-xl">
+                <div class="card max-w-[400px]  bg-white  rounded-xl mx-3 md:mx-0">
                     <div class="p-4">
                         <div class="flex justify-between items-center mb-4">
                             <div class="bg-[#FFE3E2] rounded-2xl w-[60px]"><img class="p-3" src="./assets/brac.png"
@@ -267,7 +267,7 @@
                     </div>
                 </div>
                 <!-- card 9 -->
-                <div class="max-w-[400px]  bg-white shadow[0px_2px_3px_0_#00000015] rounded-xl">
+                <div class="card max-w-[400px]  bg-white  rounded-xl mx-3 md:mx-0">
                     <div class="p-4">
                         <div class="flex justify-between items-center mb-4">
                             <div class="bg-[#FFE3E2] rounded-2xl w-[60px]"><img class="p-3" src="./assets/Bangladesh-Railway.png"
@@ -294,7 +294,7 @@
                 </div>
             </div>
             <!-- right section -->
-            <div class=" md:col-span-3 p-3 bg-white rounded-xl">
+            <div class=" md:col-span-3 p-3 bg-white rounded-xl mt-3 md:mt-0">
                 <div class="flex justify-between items-center">
                     <p class="font-bold"><i class="fa-regular fa-clock mr-2"></i>Call History</p>
                     <button id="btn-clear" class="bg-[#00A63E] text-white px-8 py-3 rounded-3xl cursor-pointer">Clear</button>
